Fix bug on selectAnotherMessage function and clean up semi-colons/spacing

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ main {
 
 .select-another-message {
   font-family: 'Quicksand', sans-serif;
-  font-size: .9em;
+  font-size: 1em;
   background-color: #134d71;
   border-radius: 5px;
   color: #ffffff;
